# pstui

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
src/pstui/: __init__.py  main.py
