[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pstui"
version = "0.1.0"
description = "A terminal UI for managing processes"
readme = "README.md"
authors = [
    { name = "tcsenpai", email = "tcsenpai@discus.sh" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
]
keywords = ["process", "tui", "system", "monitor"]
dependencies = [
    "textual>=0.52.1",
    "psutil>=5.9.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/tcsenpai/pstui"
Repository = "https://github.com/tcsenpai/pstui.git"

[project.scripts]
pstui = "pstui.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pstui"]